Servlet api with ivy instead of hard system path

--- a/ivy.xml
+++ b/ivy.xml
@@ -8,10 +8,12 @@
 		<!-- retrieve the binary jars for struts2 and log4j and its dependencies. -->
         <dependency org="org.apache.struts" name="struts2-core" rev="2.1.8.1" conf="binaries->default" />
 		<dependency org="log4j" name="log4j" rev="1.2.14" conf="binaries->default" />
+		<dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="binaries->default" />
 		
 		<!-- retrieve the SOURCE jars for struts2 and log4j, for conveniance when developing. -->
         <dependency org="org.apache.struts" name="struts2-core" rev="2.1.8.1" conf="sources->sources" />
 		<dependency org="log4j" name="log4j" rev="1.2.14" conf="sources->sources" />
+		<dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="sources->sources" />
 
 	</dependencies>
 </ivy-module>
