--- a/web.xml
+++ b/web.xml
@@ -6,8 +6,23 @@
 
     <description>Commenter</description>
     <display-name>Commenter</display-name>
+ 
+	<welcome-file-list>
+		<welcome-file>/WEB-INF/jsp/index.jsp</welcome-file>
+	</welcome-file-list>   
+
+	
+	<filter>
+	  <filter-name>struts2</filter-name>
+	  <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+	  <filter-name>struts2</filter-name>
+	   <url-pattern>*.action</url-pattern>
+	</filter-mapping>
     
-    <servlet>
+	<servlet>
       <servlet-name>HelloWorld</servlet-name>
       <servlet-class>bast1aan.commenter.HelloWorldServlet</servlet-class>
     </servlet>
