--- a/web.xml
+++ b/web.xml
@@ -36,6 +36,16 @@
 	  <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
 	</filter>
 
+	<filter>
+		<filter-name>cors</filter-name>
+		<filter-class>bast1aan.commenter.CorsFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>cors</filter-name>
+		<url-pattern>*.action</url-pattern>
+	</filter-mapping>
+	
 	<filter-mapping>
 	  <filter-name>struts2</filter-name>
 	   <url-pattern>*.action</url-pattern>
