--- a/src/settings-example.properties
+++ b/src/settings-example.properties
@@ -5,3 +5,6 @@ driver = org.postgresql.Driver
 dsn = jdbc:postgresql://localhost/commenter
 username = commenter
 password = commenter
+
+# If you use this application from behind a proxy, set this to save ip's properly
+# remote_addr_header = X-Forwarded-For
