--- a/build.xml
+++ b/build.xml
@@ -72,7 +72,13 @@
 			<classpath refid="project.class.path" />
 		</javac>
 	</target>
-	
+
+	<target name="compile-debug" depends="init">
+		<javac srcdir="src" destdir="antbuild/classes" debug="true" source="1.6" target="1.6">
+			<classpath refid="project.class.path" />
+		</javac>
+	</target>
+			
 	<target name="preprocessjs" depends="init">
 		<java classname="PreprocessJS">
 			<arg value="-i" />
